--- a/esa.jsonc
+++ b/esa.jsonc
@@ -2,7 +2,7 @@
   "name": "nuxt-template",
   "installCommand": "npm install",
   "assets": {
-    "directory": "./dist",
+    "directory": "./",
     "notFoundStrategy": "404Page"
   }
 }
